--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "jwt-decode": "^2.2.0",
+    "memoize-one": "^4.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-apollo": "^2.1.5",
