--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "booking",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "apollo-cache-inmemory": "^1.2.4",
-    "apollo-client": "^2.3.4",
-    "apollo-client-preset": "^1.0.8",
-    "apollo-link-error": "^1.1.0",
-    "apollo-link-ws": "^1.0.8",
-    "apollo-utilities": "^1.0.15",
-    "date-arithmetic": "^3.1.0",
-    "date-fns": "^1.29.0",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "jwt-decode": "^2.2.0",
-    "memoize-one": "^4.0.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.0",
-    "react-apollo": "^2.1.5",
-    "react-dom": "^16.4.0",
-    "react-motion": "^0.5.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "recompose": "^0.27.1",
-    "styled-components": "^3.3.2",
-    "subscriptions-transport-ws": "^0.9.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+	"name": "booking",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"apollo-cache-inmemory": "^1.2.4",
+		"apollo-client": "^2.3.4",
+		"apollo-client-preset": "^1.0.8",
+		"apollo-link-error": "^1.1.0",
+		"apollo-link-ws": "^1.0.8",
+		"apollo-utilities": "^1.0.15",
+		"date-arithmetic": "^3.1.0",
+		"date-fns": "^1.29.0",
+		"graphql": "^0.13.2",
+		"graphql-tag": "^2.9.2",
+		"jwt-decode": "^2.2.0",
+		"memoize-one": "^4.0.0",
+		"prop-types": "^15.6.1",
+		"react": "^16.4.0",
+		"react-apollo": "^2.1.5",
+		"react-dom": "^16.4.0",
+		"react-motion": "^0.5.2",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1",
+		"react-scripts": "1.1.4",
+		"recompose": "^0.27.1",
+		"styled-components": "^3.3.2",
+		"subscriptions-transport-ws": "^0.9.11"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"eject": "react-scripts eject"
+	}
 }
