--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
 		"react": "^16.4.0",
 		"react-apollo": "^2.1.5",
 		"react-dom": "^16.4.0",
+		"react-hot-loader": "^4.3.4",
 		"react-motion": "^0.5.2",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "1.1.4",
-		"recompose": "^0.27.1",
+		"recompose": "^0.28.2",
 		"styled-components": "^3.3.2",
 		"subscriptions-transport-ws": "^0.9.11"
 	},
