rework the multi-resource employee selection screen

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"jwt-decode": "^2.2.0",
 		"memoize-one": "^4.0.0",
 		"prop-types": "^15.6.1",
-		"react": "^16.4.0",
+		"react": "^16.7.0-alpha.2",
 		"react-apollo": "^2.1.5",
-		"react-dom": "^16.4.0",
+		"react-dom": "^16.7.0-alpha.2",
 		"react-hot-loader": "^4.3.4",
 		"react-motion": "^0.5.2",
 		"react-router": "^4.3.1",
