--- a/package.json
+++ b/package.json
@@ -4,29 +4,28 @@
 	"private": true,
 	"dependencies": {
 		"apollo-cache-inmemory": "^1.2.4",
-		"apollo-client": "^2.3.4",
-		"apollo-client-preset": "^1.0.8",
-		"apollo-link-error": "^1.1.0",
-		"apollo-link-ws": "^1.0.8",
-		"apollo-utilities": "^1.0.15",
+		"apollo-client": "^2.6.3",
+		"apollo-link-error": "^1.1.11",
+		"apollo-link-http": "^1.5.15",
+		"apollo-link-ws": "^1.0.18",
+		"apollo-utilities": "^1.3.2",
 		"date-arithmetic": "^3.1.0",
 		"date-fns": "^1.29.0",
+		"formik": "^1.5.7",
 		"graphql": "^0.13.2",
-		"graphql-tag": "^2.9.2",
+		"graphql-tag": "^2.10.1",
 		"jwt-decode": "^2.2.0",
 		"memoize-one": "^4.0.0",
 		"prop-types": "^15.6.1",
-		"react": "^16.7.0-alpha.2",
-		"react-apollo": "^2.1.5",
-		"react-dom": "^16.7.0-alpha.2",
+		"react": "^16.8.6",
+		"react-apollo": "^2.5.8",
+		"react-dom": "^16.8.6",
 		"react-hot-loader": "^4.3.4",
 		"react-input-mask": "^2.0.4",
 		"react-motion": "^0.5.2",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1",
+		"react-router-dom": "^5.0.1",
 		"react-scripts": "1.1.4",
 		"react-text-mask": "^5.4.3",
-		"recompose": "^0.28.2",
 		"styled-components": "^3.3.2",
 		"subscriptions-transport-ws": "^0.9.11"
 	},
