--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,3 @@
 REACT_APP_SUBSCRIPTION_URI="ws://localhost:3443/subscriptions"
 REACT_APP_API_URL="http://localhost:3443/api"
+REACT_APP_SENTRY_DSN="https://xxx@sentry.io"
