--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.3.0",
 	"private": true,
 	"dependencies": {
+		"@sentry/browser": "^5.6.1",
 		"apollo-cache-inmemory": "^1.2.4",
 		"apollo-client": "^2.6.3",
 		"apollo-link-error": "^1.1.11",
