--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "NeverWait Checkins",
+  "name": "NeverWait Walk-ins",
   "short_name": "NeverWait",
   "theme_color": "#000000",
   "background_color": "#000000",
