--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-apollo": "^2.5.8",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.3.4",
+    "react-icons": "^3.7.0",
     "react-input-mask": "^2.0.4",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.0.1",
