--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@sentry/browser": "^5.6.1",
     "apollo-cache-inmemory": "^1.2.4",
     "apollo-client": "^2.6.3",
@@ -15,6 +16,7 @@
     "formik": "^1.5.8",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.1",
+    "immer": "^4.0.2",
     "jwt-decode": "^2.2.0",
     "memoize-one": "^4.0.0",
     "prop-types": "^15.6.1",
@@ -22,10 +24,10 @@
     "react-apollo": "^2.5.8",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.3.4",
-    "react-icons": "^3.7.0",
+    "react-icons": "^3.8.0",
     "react-input-mask": "^2.0.4",
     "react-motion": "^0.5.2",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "react-text-mask": "^5.4.3",
     "styled-components": "^4.3.2",
