--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-icons": "^3.8.0",
 		"react-input-mask": "^2.0.4",
 		"react-motion": "^0.5.2",
+		"react-notify-toast": "^0.5.1",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.0.1",
 		"styled-components": "^4.3.2",
